--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <header>
+      <h3>Today’s Task</h3>
+      <ul>
+        <li>ログイン</li>
+        <li>新規登録</li>
+      </ul>
+    </header>
     <%= yield %>
   </body>
 </html>
