modify edit btn

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,14 @@
-<h1>show page</h1>
-<%= @user.name %>
+<div class="container">
+  <h2>会員情報ページ</h2>
+</div>
+  <div class="container">
+    <div class="border rounded px-2 my-2">
+      <P class="font-weight-bold">ユーザーネーム</P>
+      <p><%= @user.name %></p>
+    </div>
+    <div class="border rounded px-2 my-2">
+      <p class="font-weight-bold">メールアドレス</p>
+      <P><%= @user.email %></P>
+     </div>
+  <%= link_to "編集", users_information_edit_path, class: "border border-dark btn-light btn-sm" %>
+</div>
