--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>新規登録</h2>
 
 <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user' do |f| %>
@@ -32,3 +33,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
