--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
-  <h2>会員情報ページ</h2>
-</div>
-  <div class="container">
+  <div class="row mx-2">
+    <h2>会員情報ページ</h2>
+  </div>
     <div class="border rounded px-2 my-2">
-      <P class="font-weight-bold">ユーザーネーム</P>
+      <P class="font-weight-bold d-flex">ユーザーネーム</P>
       <p><%= @user.name %></p>
     </div>
     <div class="border rounded px-2 my-2">
       <p class="font-weight-bold">メールアドレス</p>
       <P><%= @user.email %></P>
-     </div>
-  <%= link_to "編集", users_information_edit_path, class: "border border-dark btn-light btn-sm" %>
+    </div>
+    <%= link_to "編集", users_information_edit_path, class: "border border-dark btn-light btn-sm" %>
 </div>
