--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
           <ul class="navbar-nav">
             <% if user_signed_in? %>
             <li class="nav-item m-2 border border-dark rounded-lg">
-              <%= link_to "タスク一覧", new_user_session_path, class:"nav-link" %>
+              <%= link_to "タスク一覧", user_main_tasks_path(current_user.id), class:"nav-link" %>
             </li>
             <li class="nav-item m-2 border border-dark rounded-lg">
               <%= link_to "会員情報", users_my_page_path, class:"nav-link" %>
