--- a/app/views/sub_tasks/new.html.erb
+++ b/app/views/sub_tasks/new.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row mx-2">
-    <h1>メインタスク作成</h1>
+    <h1>サブタスク作成</h1>
   </div>
-  <%= form_with model: @main_task, url: user_main_tasks_path(current_user.id), method: :post do |f| %>
+  <%= form_with model: @sub_task, url: sub_tasks_path, method: :post do |f| %>
   <div class="border rounded px-2 my-2">
-    <p class="font-weight-bold"><%= f.label :category_id, "カテゴリー" %></p>
-    <p><%= f.collection_select(:category_id, @categories, :id, :category) %></p>
-    <p class="font-weight-bold"><%= f.label :main_task, "メインタスク(必須)" %></p>
+    <p class="font-weight-bold"><%= f.label :main_task_id, "関連メインタスク" %></p>
+    <p><%= f.collection_select(:main_task_id, @main_tasks, :id, :main_task) %></p>
+    <p class="font-weight-bold"><%= f.label :sub_task, "サブタスク(必須)" %></p>
     <p><%= f.text_field :sub_task, :size=>"40" %></p>
     <p class="font-weight-bold"><%= f.label :memo, "メモ" %></p>
     <p><%= f.text_area :memo, :size=>"43x2" %></p>
