12/11 add status-synchro-syste, sort-function

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -26,8 +26,8 @@
       </table>
     </div>
   <% else %>
-    <div>
-      カテゴリーが登録されていません
+    <div class="mt-4">
+     <p>カテゴリーが登録されていません</p>
     </div>
   <% end %>
 </div>
