--- a/app/views/main_tasks/show.html.erb
+++ b/app/views/main_tasks/show.html.erb
@@ -16,7 +16,11 @@
   </div>
   <div class="border rounded px-2 my-2">
     <p class="font-weight-bold">期日</p>
-    <p><%= @main_task.due_date.strftime('%Y年%m月%d日') %></p>
+    <% if @main_task.due_date.present? %>
+      <p><%= @main_task.due_date.strftime('%Y年%m月%d日') %></p>
+    <% else %>
+      <p>期日がありません</p>
+    <% end %>
   </div>
   <div class="border rounded px-2 my-2">
     <p class="font-weight-bold">タスクステータス</p>
