12/13, add-main_task_order-fuction

--- a/app/views/sub_tasks/show.html.erb
+++ b/app/views/sub_tasks/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row mx-2">
     <h1>サブタスク詳細ページ</h1>
   </div>
- 
+  <div class="border rounded px-2 my-2">
     <p class="font-weight-bold">サブタスク</p>
     <p><%= @sub_task.sub_task %></p>
   </div>
