--- a/app/views/main_tasks/today_index.html.erb
+++ b/app/views/main_tasks/today_index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>タスク一覧</h1>
+  <h1>Today Tasks</h1>
   <p><%= link_to "Today Task", today_index_path(@user.id) %></p>
   <p><%= link_to "メインタスク作成", new_user_main_task_path %></p>
   <p><%= link_to "サブタスク作成", new_sub_task_path %></p>
@@ -17,10 +17,6 @@
       カテゴリー：
       <%= f.select :category, @user.categories.pluck("category, id"), { include_blank: "全て", selected: params[:category] }, { id: "user_id", class: "user_class" } %>
       <%= f.submit "絞り込む", name: nil, data: {"turbolinks"=>false} %>
-    </div>
-    <div>
-      <%=f.select :order, [["作成順", 0], ["名前順", 1], ["期日順", 2]], { selected: params[:order]} %>
-      <%= f.submit "並び替える", name: nil, data: {"turbolinks"=>false} %>
     </div>
   <% end %>
   <!--<div class="dropdown mb-3">
@@ -45,13 +41,12 @@
         aria-expanded="false">
      カテゴリーで絞り込み
     </button>
-  </div>
+  </div>-->
     <div class="dropdown-menu" aria-labelledby="dropdown3">
       <% @user.categories.each do |category| %>
         <%= link_to category.category, user_main_tasks_path(@user.id, category: category.id), class: "dropdown-item" %>
       <% end %>
-    </div>-->
-  <div>
+    </div>
   <% if @main_tasks.present? %>
     <table class="table table-bordered table-sm align-middle">
       <thead class="table-dark">
@@ -99,11 +94,11 @@
             <!-- メインタスク-ステータスの更新ボタン
                  未完の時→完了, 完了の時→未完に戻す, 削除済みの時→完了に戻すが表示される -->
             <% if main_task.status == "incomplete" %>
-              <td><%= link_to "完了", task_status_to_done_path(main_task.user.id, main_task.id, status: params[:status], catergory: params[:cagtegory], order: params[:order]), method: :patch %></td>
+              <td><%= link_to "完了", task_status_to_done_path(main_task.user.id, main_task.id), method: :patch %></td>
             <% elsif main_task.status == "done" %>
-              <td><%= link_to "未完に戻す", task_status_to_incomplete_path(main_task.user.id, main_task.id, status: params[:status], catergory: params[:cagtegory], order: params[:order]), method: :patch %></td>
+              <td><%= link_to "未完に戻す", task_status_to_incomplete_path(main_task.user.id, main_task.id), method: :patch %></td>
             <% elsif main_task.status == "deleted" %>
-              <td><%= link_to "完了に戻す", task_status_to_done_path(main_task.user.id, main_task.id, status: params[:status], catergory: params[:cagtegory], order: params[:order]), method: :patch %></td>
+              <td><%= link_to "完了に戻す", task_status_to_done_path(main_task.user.id, main_task.id), method: :patch %></td>
             <% end %>
             <!--七列目-->
             <td><%= link_to "削除", user_main_task_path(main_task.user_id, main_task.id), method: :delete %></td>
@@ -114,8 +109,10 @@
               <td><%= link_to "Todayから削除", remove_today_path(main_task.user.id, main_task.id), method: :patch %></td>
             <% end %>
           </tr>
-            <% main_task.sub_tasks.each do |sub_task| %>
-              <tr id="collapse_<%= sub_task.main_task.id %>" class="collapse.show">
+            <% sub_tasks = main_task.sub_tasks %>
+            <% sub_tasks = sub_tasks.where(status: 0) %>
+            <% sub_tasks.each do |sub_task| %>
+              <tr id="collapse_<%= sub_task.main_task.id %>" class="collapse">
                 <!--一列目-->
                 <td></td>
                 <!--二列目-->
@@ -162,5 +159,4 @@
   <% else %>
     <p>タスクが存在しません</p>
   <% end %>
-  </div>
 </div>
