--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
           <ul class="navbar-nav">
             <% if user_signed_in? %>
             <li class="nav-item m-2 border border-dark rounded-lg">
+              <%= link_to "Today's Task", user_main_tasks_path(current_user.id, today: 0), class:"nav-link" %>
+            </li>
+            <li class="nav-item m-2 border border-dark rounded-lg">
               <%= link_to "タスク一覧", user_main_tasks_path(current_user.id), class:"nav-link" %>
             </li>
             <li class="nav-item m-2 border border-dark rounded-lg">
