--- a/app/views/main_tasks/index.html.erb
+++ b/app/views/main_tasks/index.html.erb
@@ -1,28 +1,37 @@
 <div class="container">
-  <h1>タスク一覧</h1>
-  <p><%= link_to "Today Task", today_index_path(@user.id) %></p>
-  <p><%= link_to "メインタスク作成", new_user_main_task_path %></p>
-  <p><%= link_to "サブタスク作成", new_sub_task_path %></p>
-  <p><%= link_to "カテゴリー一覧", categories_path %></p>
-  <%= form_with url: user_main_tasks_path(@user.id), method: :get do |f| %>
-    <div>
-      ステータス：
-      <%= f.radio_button :status, '', checked: params[:status].blank? %>
-      <%= f.label :status, '全て', value: '' %>
-      <%= f.radio_button :status, 0, checked: params[:status] == "0" %>
-      <%= f.label :status, '未完', value: 0 %>
-      <%= f.radio_button :status, 1, checked: params[:status] == "1" %>
-      <%= f.label :status, '完了', value: 1 %>
-      /
-      カテゴリー：
-      <%= f.select :category, @user.categories.pluck("category, id"), { include_blank: "全て", selected: params[:category] }, { id: "user_id", class: "user_class" } %>
-      <%= f.submit "絞り込む", name: nil, data: {"turbolinks"=>false} %>
-    </div>
-    <div>
-      <%=f.select :order, [["作成順", 0], ["名前順", 1], ["期日順", 2]], { selected: params[:order]} %>
-      <%= f.submit "並び替える", name: nil, data: {"turbolinks"=>false} %>
-    </div>
-  <% end %>
+  <div class="mb-2">
+    <%= link_to "メインタスク作成", new_user_main_task_path, class: "btn-sm btn-primary" %>
+    <%= link_to "サブタスク作成", new_sub_task_path, class: "btn-sm btn-primary" %>
+    <%= link_to "カテゴリー一覧", categories_path, class: "btn-sm btn-primary" %>
+  </div>
+  <div>
+    <% if params[:today].present? %>
+      <%= link_to "Today以外も表示", user_main_tasks_path(@user.id, status: params[:status], category: params[:category], order: params[:order]), class: "btn-sm btn-warning" %>
+    <% else %>
+      <%= link_to "♥Todayのみ表示", user_main_tasks_path(@user.id, status: params[:status], category: params[:category], order: params[:order], today: 1), class: "btn-sm btn-warning" %>
+    <% end %>
+  </div>
+  <div class="mb-2">
+    <%= form_with url: user_main_tasks_path(@user.id), method: :get do |f| %>
+      <div>
+        ステータス：
+        <%= f.radio_button :status, '', checked: params[:status].blank? %>
+        <%= f.label :status, '全て', value: '' %>
+        <%= f.radio_button :status, 0, checked: params[:status] == "0" %>
+        <%= f.label :status, '未完', value: 0 %>
+        <%= f.radio_button :status, 1, checked: params[:status] == "1" %>
+        <%= f.label :status, '完了', value: 1 %>
+        /
+        カテゴリー：
+        <%= f.select :category, @user.categories.pluck("category, id"), { include_blank: "全て", selected: params[:category] }, { id: "user_id", class: "user_class" } %>
+        <%= f.submit "絞り込む", name: nil, data: {"turbolinks"=>false} %>
+      </div>
+      <div>
+        <%=f.select :order, [["作成順", 0], ["名前順", 1], ["期日順", 2]], { selected: params[:order]} %>
+        <%= f.submit "並び替える", name: nil, data: {"turbolinks"=>false} %>
+      </div>
+    <% end %>
+  </div>
   <!--<div class="dropdown mb-3">
     <button type="button" id="dropdown1"
         class="btn btn-secondary dropdown-toggle"
@@ -51,10 +60,19 @@
         <%= link_to category.category, user_main_tasks_path(@user.id, category: category.id), class: "dropdown-item" %>
       <% end %>
     </div>-->
-  <div>
+  <div class="mb-2">
+      <h2>
+        <% if params[:today].present? %>
+          Todaya's Task
+        <% else %>
+          タスク一覧
+      <% end %>
+      </h2>
+    </div>
+  <div class="align-middle">
   <% if @main_tasks.present? %>
     <table class="table table-bordered table-sm align-middle">
-      <thead class="table-dark">
+      <thead class="table-dark text-center align-middle">
         <tr>
           <th></th>
           <th>タスク</th>
@@ -71,88 +89,93 @@
           <tr class="table-secondary">
             <!--一列目-->
             <% if main_task.sub_tasks.present? %>
-              <td>
+              <td class="align-middle">
                 <a data-toggle="collapse" href="#collapse_<%= main_task.id %>">▼</a>
               </td>
               <% else %>
               <td></td>
             <% end %>
             <!--二列目-->
-            <td><%= link_to main_task.main_task, user_main_task_path(main_task.user_id, main_task.id) %></td>
+            <td class="align-middle"><%= link_to main_task.main_task, user_main_task_path(main_task.user_id, main_task.id) %></td>
             <!--三列目-->
-            <td><%= main_task.category.category %></td>
+            <td class="align-middle"><%= main_task.category.category %></td>
             <!--四列目-->
             <% if main_task.due_date.present? %>
-              <td><%= main_task.due_date.strftime('%Y年%m月%d日') %></td>
+              <td class="align-middle"><%= main_task.due_date.strftime('%Y年%m月%d日') %></td>
             <% else %>
               <td>なし</td>
             <% end %>
             <!--五列目-->
             <% if main_task.status == "incomplete" %>
-              <td class="text-center"><div class="border rounded bg-danger"><%= MainTask.statuses_i18n[main_task.status] %></div></td>
+              <td class="text-center align-middle"><div class="border rounded bg-danger"><%= MainTask.statuses_i18n[main_task.status] %></div></td>
             <% elsif main_task.status == "done" %>
-              <td class="text-center"><div class="border rounded bg-success"><%= MainTask.statuses_i18n[main_task.status] %></div></td>
+              <td class="text-center align-middle"><div class="border rounded bg-success"><%= MainTask.statuses_i18n[main_task.status] %></div></td>
             <% elsif main_task.status == "deleted" %>
-              <td class="text-center"><div class="border rounded bg-secondary"><%= MainTask.statuses_i18n[main_task.status] %></div></td>
+              <td class="text-center align-middle"><div class="border rounded bg-secondary"><%= MainTask.statuses_i18n[main_task.status] %></div></td>
             <% end %>
             <!--六列目-->
             <!-- メインタスク-ステータスの更新ボタン
                  未完の時→完了, 完了の時→未完に戻す, 削除済みの時→完了に戻すが表示される -->
             <% if main_task.status == "incomplete" %>
-              <td><%= link_to "完了", task_status_to_done_path(main_task.user.id, main_task.id, status: params[:status], catergory: params[:cagtegory], order: params[:order]), method: :patch %></td>
+              <td class="text-center align-middle"><%= link_to "完了",
+              task_status_to_done_path(main_task.user.id, main_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :patch, class: "btn-sm btn-link" %></td>
             <% elsif main_task.status == "done" %>
-              <td><%= link_to "未完に戻す", task_status_to_incomplete_path(main_task.user.id, main_task.id, status: params[:status], catergory: params[:cagtegory], order: params[:order]), method: :patch %></td>
+              <td class="text-center align-middle"><%= link_to "未完に戻す", task_status_to_incomplete_path(main_task.user.id, main_task.id, status: params[:status], catergory: params[:category], order: params[:order], today: params[:today]), method: :patch, class: "btn-sm btn-link" %></td>
             <% elsif main_task.status == "deleted" %>
-              <td><%= link_to "完了に戻す", task_status_to_done_path(main_task.user.id, main_task.id, status: params[:status], catergory: params[:cagtegory], order: params[:order]), method: :patch %></td>
+              <td class="text-center align-middle"><%= link_to "完了に戻す", task_status_to_done_path(main_task.user.id, main_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :patch, class: "btn-sm btn-link" %></td>
             <% end %>
             <!--七列目-->
-            <td><%= link_to "削除", user_main_task_path(main_task.user_id, main_task.id), method: :delete %></td>
+            <td class="text-center align-middle"><%= link_to "削除", user_main_task_path(main_task.user_id, main_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :delete, class: "btn-sm btn-link" %></td>
             <!--八列目-->
             <% if main_task.is_today_task == false %>
-              <td><%= link_to "Todayに追加", add_today_path(main_task.user.id, main_task.id), method: :patch %></td>
+              <td class="text-center align-middle"><%= link_to "Todayに追加", add_today_path(main_task.user.id, main_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :patch, class: "btn-sm btn-link" %></td>
             <% elsif main_task.is_today_task == true %>
-              <td><%= link_to "Todayから削除", remove_today_path(main_task.user.id, main_task.id), method: :patch %></td>
+              <td class="text-center align-middle">♥<%= link_to "Todayから削除", remove_today_path(main_task.user.id, main_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :patch, class: "btn-sm btn-link" %></td>
             <% end %>
           </tr>
-            <% main_task.sub_tasks.each do |sub_task| %>
-              <tr id="collapse_<%= sub_task.main_task.id %>" class="collapse.show">
+            <% sub_tasks = main_task.sub_tasks %>
+            <% if params[:today].present? %>
+              <% sub_tasks = sub_tasks.where(is_today_task: true) %>
+            <% end %>
+            <% sub_tasks.each do |sub_task| %>
+              <tr id="collapse_<%= sub_task.main_task.id %>" class="collapse show">
                 <!--一列目-->
-                <td></td>
+                <td class="align-middle"></td>
                 <!--二列目-->
-                <td><%= link_to sub_task.sub_task, sub_task_path(sub_task.id) %></td>
+                <td class="align-middle"><%= link_to sub_task.sub_task, sub_task_path(sub_task.id) %></td>
                 <!--三列目-->
-                <td></td>
+                <td class="align-middle"></td>
                 <!--四列目-->
                 <% if sub_task.due_date.present? %>
-                  <td><%= sub_task.due_date.strftime('%Y年%m月%d日') %></td>
+                  <td class="align-middle"><%= sub_task.due_date.strftime('%Y年%m月%d日') %></td>
                 <% else %>
-                  <td>なし</td>
+                  <td class="align-middle">なし</td>
                 <% end %>
                 <!--五列目-->
                 <% if sub_task.status == "incomplete" %>
-                  <td class="text-center"><div class="border rounded bg-danger"><%= SubTask.statuses_i18n[sub_task.status] %></div></td>
+                  <td class="text-center align-middle"><div class="border rounded bg-danger"><%= SubTask.statuses_i18n[sub_task.status] %></div></td>
                 <% elsif sub_task.status == "done" %>
-                  <td class="text-center"><div class="border rounded bg-success"><%= SubTask.statuses_i18n[sub_task.status] %></div></td>
+                  <td class="text-center align-middle"><div class="border rounded bg-success"><%= SubTask.statuses_i18n[sub_task.status] %></div></td>
                 <% elsif sub_task.status == "deleted" %>
-                  <td class="text-center"><div class="border rounded bg-secondary"><%= SubTask.statuses_i18n[sub_task.status] %></div></td>
+                  <td class="text-center align-middle"><div class="border rounded bg-secondary"><%= SubTask.statuses_i18n[sub_task.status] %></div></td>
                 <% end %>
                 <!--六列目-->
                 <!-- メインタスク-ステータスの更新ボタン
                  未完の時→完了, 完了の時→未完に戻す, 削除済みの時→完了に戻すが表示される -->
                 <% if sub_task.status == "incomplete" %>
-                  <td><%= link_to "完了", sub_task_status_to_done_path(sub_task.id), method: :patch %></td>
+                  <td class="text-center align-middle"><%= link_to "完了", sub_task_status_to_done_path(sub_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :patch , class: "btn-sm btn-link"%></td>
                 <% elsif sub_task.status == "done" %>
-                  <td><%= link_to "未完に戻す", sub_task_status_to_incomplete_path(sub_task.id), method: :patch %></td>
+                  <td class="text-center align-middle"><%= link_to "未完に戻す", sub_task_status_to_incomplete_path(sub_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :patch , class: "btn-sm btn-link"%></td>
                 <% elsif sub_task.status == "deleted" %>
-                  <td><%= link_to "完了に戻す", sub_task_status_to_done_path(sub_task.id), method: :patch %></td>
+                  <td class="text-center align-middle"><%= link_to "完了に戻す", sub_task_status_to_done_path(sub_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :patch , class: "btn-sm btn-link"%></td>
                 <% end %>
                 <!--七列目-->
-                <td><%= link_to "削除", sub_task_path(sub_task.id), method: :delete %></td>
+                <td class="text-center align-middle"><%= link_to "削除", sub_task_path(sub_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :delete , class: "btn-sm btn-link"%></td>
                 <!--八列目-->
                 <% if sub_task.is_today_task == false %>
-                  <td><%= link_to "Todayに追加", sub_add_today_path(sub_task.id), method: :patch %></td>
+                  <td class="text-center align-middle"><%= link_to "Todayに追加", sub_add_today_path(sub_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :patch , class: "btn-sm btn-link"%></td>
                 <% elsif sub_task.is_today_task == true %>
-                  <td><%= link_to "Todayから削除", sub_remove_today_path(sub_task.id), method: :patch %></td>
+                  <td class="text-center align-middle">♥<%= link_to "Todayから削除", sub_remove_today_path(sub_task.id, status: params[:status], category: params[:category], order: params[:order], today: params[:today]), method: :patch , class: "btn-sm btn-link"%></td>
                 <% end %>
               </tr>
             <% end %>
