--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -25,6 +25,9 @@
             </li>
             <li class="nav-item m-2 border border-dark rounded-lg">
               <%= link_to "タスク一覧", user_main_tasks_path(current_user.id), class:"nav-link" %>
+            </li>
+            <li class="nav-item m-2 border border-dark rounded-lg">
+              <%= link_to "カレンダー", calendar_path(current_user.id), class:"nav-link" %>
             </li>
             <li class="nav-item m-2 border border-dark rounded-lg">
               <%= link_to "会員情報", users_my_page_path, class:"nav-link" %>
