--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,3 +1,14 @@
 <div class="container">
-  <h1>Top Page</h1>
+  <h2>トップページ</h2>
+  <p>●Today's Taskは個人のニーズに合った使い方ができるToDo Listです。</p>
+  <p>●一番の特徴は多くのタスクの中から今日実施するタスク = Today's Taskを選択することで、今日の目標をはっきりさせることが可能です！</p>
+  <%= image_tag 'task_index.png', class:"border rounded" %>
+  <p>●ユーザーが独自にカテゴリを作成でき、カテゴリ別にタスクを作成できるので、仕事やプライベートなど、さまざまな種類のタスクを一括で管理できます。</p>
+  <%= image_tag 'category_index.png', class:"border rounded" %>
+  <p>●許可制で他ユーザーのタスクが見られたり、メインタスクをカレンダーで確認することも可能です。</p>
+  <%= image_tag 'user_coopration.png', class:"border rounded" %>
+  <%= image_tag 'calendar.png', class:"border rounded" %>
+  <p>●右上のリンクから使用をはじめてください！</p>
+  <p>●Today's Taskは日々改善されている最中です。ご意見・ご要望があればぜひ連絡お願いします！</p>
+  <p>xxx@xxx.com</p>
 </div>
