--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,13 @@
         </div>
       </nav>
     </header>
+      <div class="container">
+      <% flash.each do |key, message| %>
+        <div class="alert alert-<%= bootstrap_alert(key) %>">
+          <%= message %>
+        </div>
+      </div>
+      <% end %>
       <%= yield %>
   </body>
 </html>
