--- a/app/views/sub_tasks/show.html.erb
+++ b/app/views/sub_tasks/show.html.erb
@@ -12,7 +12,11 @@
   </div>
   <div class="border rounded px-2 my-2">
     <p class="font-weight-bold">メモ</p>
-    <p><%= @sub_task.memo %></p>
+    <% if @sub_task.memo.present? %>
+      <p><%= @sub_task.memo %></p>
+    <% else %>
+      <p>メモはありません</p>
+    <% end %>
   </div>
   <div class="border rounded px-2 my-2">
     <p class="font-weight-bold">期日</p>
