--- a/app/views/main_tasks/index.html.erb
+++ b/app/views/main_tasks/index.html.erb
@@ -65,7 +65,7 @@
   <div class="mb-2">
       <h2>
         <% if params[:today].present? %>
-          <%= @user.name %>さんのTodaya's Task
+          <%= @user.name %>さんのToday's Task
         <% else %>
           <%= @user.name %>さんのタスク一覧
       <% end %>
