--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,4 +11,5 @@
       <P><%= @user.email %></P>
     </div>
     <%= link_to "編集", users_information_edit_path, class: "border border-dark btn-light btn-sm" %>
+    <%= link_to "退会", users_unsubscribe_path, class: "border border-dark btn-light btn-sm" %>
 </div>
