--- a/app/views/sub_tasks/new.html.erb
+++ b/app/views/sub_tasks/new.html.erb
@@ -16,7 +16,7 @@
   <div class="border rounded px-2 my-2">
     <p class="font-weight-bold"><%= f.label :sub_task, "サブタスク(必須)" %></p>
     <p><%= f.text_field :sub_task, :size=>"40" %></p>
-    <p class="font-weight-bold"><%= f.label :main_task_id, "関連メインタスク" %></p>
+    <p class="font-weight-bold"><%= f.label :main_task_id, "関連メインタスク（必須）" %></p>
     <p><%= f.collection_select(:main_task_id, @main_tasks, :id, :main_task, {include_blank: "選択してください"}) %></p>
     <p class="font-weight-bold"><%= f.label :memo, "メモ" %></p>
     <p><%= f.text_area :memo, :size=>"43x2" %></p>
