--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if resource.errors.any? %>
   <div id="error_explanation" class="alert alert-danger">
     <h2>
-      <%= I18n.t(count: resource.errors.count,
+      <%#= I18n.t(count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
     </h2>
