--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -4,6 +4,8 @@
       <%#= I18n.t(count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
+       <%= I18n.t(count: resource.errors.count)
+       %>
     </h2>
     <ul>
       <% resource.errors.full_messages.each do |message| %>
